commit on 'main'

--- a/pizzaria/cliente.html
+++ b/pizzaria/cliente.html
@@ -22,6 +22,8 @@
         <br>
             Endereço:
             <input type="text" name="endereço">
+            Nº
+            <input type="text" name="numero-rua">
             </font>
     
 
