commit on 'main'

--- a/pizzaria/cliente.html
+++ b/pizzaria/cliente.html
@@ -4,29 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="client.css">
     <title>Cadastro</title>
 </head>
 <body bgcolor="black">
     <form>
         <center>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
             <font face="Ink Free" size="7" color="white"><b> CADASTRO </b></font>
         <br>
         <br>
         <br>
-            <font face="Ink Free" color="white"><b> 
+            <font face="Ink Free" size="6" color="white"><b> 
             Nome:
-            <input type="text" name="nome-completo">
+            <input type="text" size="100" name="nome-completo">
             Telefone:
-            <input type="text" name="telefone">
+            <input type="text" size="15" name="telefone" maxlength="15" value="Ex.:(xx) 00000-0000">
         <br>
         <br>
             Endereço:
-            <input type="text" name="endereço">
-            Nº
-            <input type="text" name="numero-rua">
+            <input type="text" size="85" name="endereço">
+            Nº:
+            <input type="text" size="10" name="numero-rua">
+        <br>    
+        <br> 
+            CPF:
+            <input type="text" name="cpf" size="16" maxlength="14" value="Ex.: 000.000.000-00">
+        <br>
+        <br>
+            
+            <input type="submit" size="90" value="CADASTRAR">
             </font>
-    
-
         </center>
     </form>
 </body>
