commit on 'main' i guess

--- a/pizzaria/cliente.html
+++ b/pizzaria/cliente.html
@@ -40,11 +40,22 @@
         <br> 
             CPF:
             <input type="text" name="cpf" size="16" maxlength="14" value="Ex.: 000.000.000-00">
+            E-mail:
+            <input type="text" name="email" size="80">
         <br>
         <br>
-            
-            <input type="submit" size="90" value="CADASTRAR">
-            </font>
+        </b></font>
+        
+        <font face="Ink Free" size="3" color="white"><b>
+            <input type="checkbox" value="aceitar"> Eu li e aceito os <u>Termos de Uso</u> e concordo com tudo que está dito nele. 
+        <br>
+        <br>
+            <input type="checkbox" value="email"> Aceito receber notificações de atualizações e novos produtos da empresa no meu e-mail.
+        </b></font>
+
+        <br>
+        <br>
+            <input type="submit" value="CADASTRAR"> 
         </center>
     </form>
 </body>
