--- a/pizzaria/index.html
+++ b/pizzaria/index.html
@@ -125,16 +125,57 @@
     </tr>
     </table>
 
+<font face="Ink Free" color="white" size="5"><b>
+    SE CADASTRE PARA SABOREAR NOSSAS PIZZAS DELICIOSAS
+    <br>
+    <a href="cliente.html">CLIQUE AQUI PARA SE CADASTRAR!</a>
+</b></font>
+
 </center>
 
-    <font face="Ink Free" color="white" size="6"><b> FORMAS DE PAGAMENTO
-    
-     <ul>
-         <li> Cartão (débito ou crédito)</li>
-         <li> Dinheiro </li>
-         <li> PIX </li>
-     </ul>
+<br>
+<br>
+  
+<form>
 
-     </b></font>
+    <font face="Ink Free" color="white" size="6"><b> 
+        FORMAS DE PAGAMENTO
+    <br>
+    <br>
+    <input type="radio" name="cartaod" value="Cartãod"> Cartão (débito)
+    <br>
+    <input type="radio" name="cartaoc" value="Cartãoc"> Cartão (crédito)
+    <br>
+    <input type="radio" name="dinheiro" value="Dinheiro"> Dinheiro
+    <br>
+    <input type="radio" name="pix" value="Pix"> PIX
+
+</form>
+
+<br>
+<br>
+
+<form>
+
+    ADICIONAIS
+    <br>
+    <br>
+    <input type="checkbox" name="Cheddar"> Cheddar
+    <input type="checkbox" name="Bacon"> Bacon
+    <br>
+    <input type="checkbox" name="Cebola"> Cebola
+    <input type="checkbox" name="Orégano"> Orégano
+    <br>
+    <input type="checkbox" name="Azeitona"> Azeitona
+    <input type="checkbox" name="Barbecue"> Barbecue
+</b></font>
+</form>
+
+<center>
+    <font face="Ink Free" size="7" color="white"><b>
+        BON APPETIT!
+    </b></font>
+</center>
+     
 </body>
 </html>
