--- a/RECEITA - CSS/receita.html
+++ b/RECEITA - CSS/receita.html
@@ -8,8 +8,10 @@
     <title>RECEITA</title>
 </head>
 <body>
-    <p class="p1"> oi porra</p>
-    <p class="p2"> tchau po</p>
-    <p class="p3"> tomanocu</p>
+    <center>
+    <p class="p1"> Caldo de Mandioca com Bacon</p>
+    <br>
+    <p class="p2"> Ingredientes </p>
+    <p class="p3"> </p>
 </body>
 </html>
