--- a/RECEITA - CSS/receita.html
+++ b/RECEITA - CSS/receita.html
@@ -9,9 +9,20 @@
 </head>
 <body>
     <center>
-    <p class="p1"> Caldo de Mandioca com Bacon</p>
+<p class="p1"> Caldo de Mandioca com Bacon</p>
     <br>
-    <p class="p2"> Ingredientes </p>
+<p class="p2"> Ingredientes
+        <br>
+    500 gramas de mandioca descascada
+    <br>
+    100 gramas de bacon picado
+    <br>
+    1 gomo de calabrasa picada
+    <br>
+    1 cebola picada
+    <br>
+    Cheiro verde a gosto
+ </p>
     <p class="p3"> </p>
 </body>
 </html>
