--- a/RECEITA - CSS/receita.html
+++ b/RECEITA - CSS/receita.html
@@ -8,21 +8,36 @@
     <title>RECEITA</title>
 </head>
 <body>
-    <center>
-<p class="p1"> Caldo de Mandioca com Bacon</p>
+<p class="p1"> Caldo de Mandioca com Bacon </p>
     <br>
-<p class="p2"> Ingredientes
-        <br>
-    500 gramas de mandioca descascada
-    <br>
-    100 gramas de bacon picado
-    <br>
-    1 gomo de calabrasa picada
-    <br>
-    1 cebola picada
-    <br>
-    Cheiro verde a gosto
+
+<p class="p2">
+    <b> Ingredientes </b> </p>
+
+    <ul>
+        <li><p class="p2">500 gramas de mandioca descascada</p></li>
+        <li><p class="p2">100 gramas de bacon picado</p></li>
+        <li><p class="p2">1 gomo de calabrasa picada</p></li>
+        <li><p class="p2">1 cebola picada</p></li>
+        <li><p class="p2">Cheiro verde a gosto</p></li>
+    </ul>
  </p>
-    <p class="p3"> </p>
-</body>
+<br>
+    <p class="p3"><b> Modo de Preparo</b></p>
+
+        <ol>
+            <li><p class="p3"> Coloque a mandioca na panela de pressão, cubra-a com água, tampe e leve para cozinhar. </p></li>
+            <li><p class="p3"> Deixe por 30 após pegar pressão. </p></li>
+            <li><p class="p3"> Após isso desligue o fogo e aguarde até que a pressão saia sozinha. </p></li>
+            <li><p class="p3"> Retire a mandioca da panela e despeje no liquidificador, junto com a água. </p></li>
+            <li><p class="p3"> Bata por cerca de 2 minutos ou até que forme um creme bem homogêneo. Reserve. </p></li>
+            <li><p class="p3"> Aqueça uma panela e frite o bacon até dourar. </p></li>
+            <li><p class="p3"> Em seguida adicione a cebola e refogue ligeiramente. </p></li>
+            <li><p class="p3"> Adicione a calabresa e frite ate dourar. </p></li>
+            <li><p class="p3"> Acrescente o creme de mandioca e mexa para misturar bem. </p></li>
+            <li><p class="p3"> Abaixe o fogo e mexa de vez em quando até começar a ferver. </p></li>
+            <li><p class="p3"> DICA: Prove, caso seja necessário adicione um pouquinho de sal. </p></li>
+            <li><p class="p3"> Para finalizar, salpique cheiro verde e sirva em seguida. </p></li>
+        </ol>
+    </p>
 </html>
