--- a/CARD/index.html
+++ b/CARD/index.html
@@ -7,12 +7,43 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    <div class="cartao">
+<body><center>
+    <h1>Curiosidades Ecológicas</h1>
+
+    <div class="cartoes">
+      <div class="cartao cartao1">
         <div class="cartao-container">
-            <div class="cartao-frente"></div>
-            <div class="cartao-atras"></div>
+          <div class="cartao-front"></div>
+          <div class="cartao-back">
+            <b>Técnico em Desenvolvimento de Sistemas</b>
+          </div>
         </div>
+      </div>
+      <div class="cartao cartao2">
+        <div class="cartao-container">
+          <div class="cartao-front"></div>
+          <div class="cartao-back">
+            Um estudo recente indica que algumas sacolas biodegradáveis continuam intactas após três anos enterradas.
+          </div>
+        </div>
+      </div>
+      <div class="cartao cartao3">
+        <div class="cartao-container">
+          <div class="cartao-front"></div>
+          <div class="cartao-back">
+            Pelo uso excessivo de agrotóxicos, as abelhas estão correndo sério risco de extinção. Pela polinização, sem elas, podemos enfrentar escassez de alimento.
+          </div>
+        </div>
+      </div>
+      <div class="cartao cartao4">
+        <div class="cartao-container">
+          <div class="cartao-front"></div>
+          <div class="cartao-back">
+            Pelo sucesso de Game of Thrones, o número de lobos abandonados aumentou. Isso porque as pessoas os capturam, achando que eles se comportarão como os huskies, porém, eles são extremamente agressivos e territoriais.
+          </div>
+        </div>
+      </div>
     </div>
+    </center>
 </body>
 </html>
