--- a/CARD/index.html
+++ b/CARD/index.html
@@ -8,14 +8,14 @@
     <title>Document</title>
 </head>
 <body><center>
-    <h1>Curiosidades Ecológicas</h1>
+    <h1>Aqui estão os cursos que estarão presentes no Vestibulinho da Etec de Lins</h1>
 
     <div class="cartoes">
       <div class="cartao cartao1">
         <div class="cartao-container">
           <div class="cartao-front"></div>
           <div class="cartao-back">
-            <b>Técnico em Desenvolvimento de Sistemas</b>
+            <b>Enfermagemm</b>
           </div>
         </div>
       </div>
@@ -23,7 +23,7 @@
         <div class="cartao-container">
           <div class="cartao-front"></div>
           <div class="cartao-back">
-            Um estudo recente indica que algumas sacolas biodegradáveis continuam intactas após três anos enterradas.
+            <b>Administração</b>
           </div>
         </div>
       </div>
@@ -31,7 +31,7 @@
         <div class="cartao-container">
           <div class="cartao-front"></div>
           <div class="cartao-back">
-            Pelo uso excessivo de agrotóxicos, as abelhas estão correndo sério risco de extinção. Pela polinização, sem elas, podemos enfrentar escassez de alimento.
+            <b>Edificações</b>
           </div>
         </div>
       </div>
@@ -39,7 +39,31 @@
         <div class="cartao-container">
           <div class="cartao-front"></div>
           <div class="cartao-back">
-            Pelo sucesso de Game of Thrones, o número de lobos abandonados aumentou. Isso porque as pessoas os capturam, achando que eles se comportarão como os huskies, porém, eles são extremamente agressivos e territoriais.
+            <b>Química</b>
+          </div>
+        </div>
+      </div>
+      <div class="cartao cartao5">
+        <div class="cartao-container">
+          <div class="cartao-front"></div>
+          <div class="cartao-back">
+            <b>Recursos Humanos</b>
+          </div>
+        </div>
+      </div>
+      <div class="cartao cartao6">
+        <div class="cartao-container">
+          <div class="cartao-front"></div>
+          <div class="cartao-back">
+            <b>Serviços Jurídicos</b>
+          </div>
+        </div>
+      </div>
+      <div class="cartao cartao7">
+        <div class="cartao-container">
+          <div class="cartao-front"></div>
+          <div class="cartao-back">
+            <b>Mecatrônica</b>
           </div>
         </div>
       </div>
