--- a/CARD/index.html
+++ b/CARD/index.html
@@ -1,73 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Cursos Vestibulinho ETEC</title>
 </head>
-<body><center>
-    <h1>Aqui estão os cursos que estarão presentes no Vestibulinho da Etec de Lins</h1>
+<body>
+   
+  <h1> Cursos presentes no Vestibulinho da Etec de Lins </h1>
 
-    <div class="cartoes">
-      <div class="cartao cartao1">
-        <div class="cartao-container">
-          <div class="cartao-front"></div>
-          <div class="cartao-back">
-            <b>Enfermagemm</b>
-          </div>
-        </div>
-      </div>
-      <div class="cartao cartao2">
-        <div class="cartao-container">
-          <div class="cartao-front"></div>
-          <div class="cartao-back">
-            <b>Administração</b>
-          </div>
-        </div>
-      </div>
-      <div class="cartao cartao3">
-        <div class="cartao-container">
-          <div class="cartao-front"></div>
-          <div class="cartao-back">
-            <b>Edificações</b>
-          </div>
-        </div>
-      </div>
-      <div class="cartao cartao4">
-        <div class="cartao-container">
-          <div class="cartao-front"></div>
-          <div class="cartao-back">
-            <b>Química</b>
-          </div>
-        </div>
-      </div>
-      <div class="cartao cartao5">
-        <div class="cartao-container">
-          <div class="cartao-front"></div>
-          <div class="cartao-back">
-            <b>Recursos Humanos</b>
-          </div>
-        </div>
-      </div>
-      <div class="cartao cartao6">
-        <div class="cartao-container">
-          <div class="cartao-front"></div>
-          <div class="cartao-back">
-            <b>Serviços Jurídicos</b>
-          </div>
-        </div>
-      </div>
-      <div class="cartao cartao7">
-        <div class="cartao-container">
-          <div class="cartao-front"></div>
-          <div class="cartao-back">
-            <b>Mecatrônica</b>
-          </div>
+  <div class="cartoes">
+    <div class="cartao cartao1">
+      <div class="cartao-container">
+        <div class="cartao-front"></div>
+        <div class="cartao-back">
+          Houve um aumento de 25% da população de gorilas das montanhas, desde 2010. Hoje já são mais de 1000 gorilas nas matas.
         </div>
       </div>
     </div>
-    </center>
+    <div class="cartao cartao2">
+      <div class="cartao-container">
+        <div class="cartao-front"></div>
+        <div class="cartao-back">
+          Um estudo recente indica que algumas sacolas biodegradáveis continuam intactas após três anos enterradas.
+        </div>
+      </div>
+    </div>
+    <div class="cartao cartao3">
+      <div class="cartao-container">
+        <div class="cartao-front"></div>
+        <div class="cartao-back">
+          Pelo uso excessivo de agrotóxicos, as abelhas estão correndo sério risco de extinção. Pela polinização, sem elas, podemos enfrentar escassez de alimento.
+        </div>
+      </div>
+    </div>
+    <div class="cartao cartao4">
+      <div class="cartao-container">
+        <div class="cartao-front"></div>
+        <div class="cartao-back">
+          Pelo sucesso de Game of Thrones, o número de lobos abandonados aumentou. Isso porque as pessoas os capturam, achando que eles se comportarão como os huskies, porém, eles são extremamente agressivos e territoriais.
+        </div>
+      </div>
+    </div>
+    <div class="cartao cartao5">
+      <div class="cartao-container">
+        <div class="cartao-front"></div>
+        <div class="cartao-back">
+          Um estudo recente indica que algumas sacolas biodegradáveis continuam intactas após três anos enterradas.
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </body>
 </html>
