--- a/CARD/index.html
+++ b/CARD/index.html
@@ -16,7 +16,13 @@
       <div class="cartao-container">
         <div class="cartao-front"></div>
         <div class="cartao-back">
-          Houve um aumento de 25% da população de gorilas das montanhas, desde 2010. Hoje já são mais de 1000 gorilas nas matas.
+          <center><b>
+          O técnico cumpre função assistencial ao enfermeiro, 
+          como cuidados básicos em pacientes graves, aaplicação 
+          de vacina, dar um banho em um paciente, auxiliar em exames, 
+          entre outras funções. Pode atuar na área administrativa, na prevenção
+          e pode montar ações educativas, na área de segurança do trabalho.
+          </b></center>
         </div>
       </div>
     </div>
@@ -24,7 +30,9 @@
       <div class="cartao-container">
         <div class="cartao-front"></div>
         <div class="cartao-back">
-          Um estudo recente indica que algumas sacolas biodegradáveis continuam intactas após três anos enterradas.
+          <center><b>
+            O técnico em Administração pode trabalhar em vários departamentos.
+          </b></center>
         </div>
       </div>
     </div>
