--- a/CARD/index.html
+++ b/CARD/index.html
@@ -31,7 +31,12 @@
         <div class="cartao-front"></div>
         <div class="cartao-back">
           <center><b>
-            O técnico em Administração pode trabalhar em vários departamentos.
+            O técnico em Administração pode trabalhar em vários departammentos. No setor
+            de compras, por exemplo, pode elaborar pedidos de compra de produtos, cadastrar fornecedores 
+            assim como conferir a entrega das mercadorias adquiridas. Na área de produção, pode fazer 
+            planilhas de controle de processos e produtos, registrando quais já foram produzidos e em qual
+            quantidade. No departamento de vendas, também pode elaborar planilhas para acompanhar o desempenho
+            das vendas, cadastrar clientes, preencher notas fiscais e gerar boletos bancários.
           </b></center>
         </div>
       </div>
@@ -40,7 +45,13 @@
       <div class="cartao-container">
         <div class="cartao-front"></div>
         <div class="cartao-back">
-          Pelo uso excessivo de agrotóxicos, as abelhas estão correndo sério risco de extinção. Pela polinização, sem elas, podemos enfrentar escassez de alimento.
+          <center><b>
+            Atua em escritórios, auxilia e elabora projetos de arquitetura e
+            engenharia civil, dentro dos limites regulamentados. Em obras, atua
+            no planejamento e fiscalização das obras de construção civil. Também 
+            pode trabalhar com assessoria técnica, consultor de tecnologias ou na 
+            prestação de serviços de manutenção e reparos prediais.
+          </b></center>
         </div>
       </div>
     </div>
