--- a/CARD/index.html
+++ b/CARD/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Cursos Vestibulinho ETEC</title>
-</head>
-<body>
-   
-  <h1> Cursos presentes no Vestibulinho da Etec de Lins </h1>
 
-  <div class="cartoes">
-    <div class="cartao cartao1">
-      <div class="cartao-container">
-        <div class="cartao-front"></div>
-        <div class="cartao-back">
-          <center><b>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Cursos Vestibulinho ETEC</title>
+</head>
+
+<body>
+
+    <h1> Cursos presentes no Vestibulinho da Etec de Lins </h1>
+
+    <div class="cartoes">
+        <div class="cartao cartao1">
+            <div class="cartao-container">
+                <div class="cartao-front"></div>
+                <div class="cartao-back">
+                    <center><b>
           O técnico cumpre função assistencial ao enfermeiro, 
           como cuidados básicos em pacientes graves, aaplicação 
           de vacina, dar um banho em um paciente, auxiliar em exames, 
           entre outras funções. Pode atuar na área administrativa, na prevenção
           e pode montar ações educativas, na área de segurança do trabalho.
           </b></center>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="cartao cartao2">
-      <div class="cartao-container">
-        <div class="cartao-front"></div>
-        <div class="cartao-back">
-          <center><b>
+        <div class="cartao cartao2">
+            <div class="cartao-container">
+                <div class="cartao-front"></div>
+                <div class="cartao-back">
+                    <center><b>
             O técnico em Administração pode trabalhar em vários departammentos. No setor
             de compras, por exemplo, pode elaborar pedidos de compra de produtos, cadastrar fornecedores 
             assim como conferir a entrega das mercadorias adquiridas. Na área de produção, pode fazer 
@@ -38,40 +40,54 @@
             quantidade. No departamento de vendas, também pode elaborar planilhas para acompanhar o desempenho
             das vendas, cadastrar clientes, preencher notas fiscais e gerar boletos bancários.
           </b></center>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="cartao cartao3">
-      <div class="cartao-container">
-        <div class="cartao-front"></div>
-        <div class="cartao-back">
-          <center><b>
+        <div class="cartao cartao3">
+            <div class="cartao-container">
+                <div class="cartao-front"></div>
+                <div class="cartao-back">
+                    <center><b>
             Atua em escritórios, auxilia e elabora projetos de arquitetura e
             engenharia civil, dentro dos limites regulamentados. Em obras, atua
             no planejamento e fiscalização das obras de construção civil. Também 
             pode trabalhar com assessoria técnica, consultor de tecnologias ou na 
             prestação de serviços de manutenção e reparos prediais.
           </b></center>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="cartao cartao4">
-      <div class="cartao-container">
-        <div class="cartao-front"></div>
-        <div class="cartao-back">
-          Pelo sucesso de Game of Thrones, o número de lobos abandonados aumentou. Isso porque as pessoas os capturam, achando que eles se comportarão como os huskies, porém, eles são extremamente agressivos e territoriais.
+        <div class="cartao cartao4">
+            <div class="cartao-container">
+                <div class="cartao-front"></div>
+                <div class="cartao-back">
+                    <center><b>
+            Pode atuar em diversas áreas como analista ou supervisor de processos.
+            Ele analisa a qualidade e a pureza da matéria-prima que chega na empresa.
+            Também pode desenvolver produtos e trabalhar com controle de qualidade nos processos químicos.
+          </b></center>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="cartao cartao5">
-      <div class="cartao-container">
-        <div class="cartao-front"></div>
-        <div class="cartao-back">
-          Um estudo recente indica que algumas sacolas biodegradáveis continuam intactas após três anos enterradas.
+        <div class="cartao cartao5">
+            <div class="cartao-container">
+                <div class="cartao-front"></div>
+                <div class="cartao-back">
+                    <center><b>
+            Anuncia vagas de emprego, descrevendo as atribuições do cargo a ser preenchido; aplica testes em 
+            processos seletivos; realiza cálculos para determinar os valores que serão descontados no salário dos 
+            funcionários, como o Imposto de Renda e a contribuição ao INSS, além de porcentagem referente a
+            benefícios, como vale-transporte, plano de saúde, etc; insere informações no sistema para a geração
+            de demonstrativos de pagamentos (holerites ou contracheques); cuida da documentação necessária 
+            para aposentadoria, contratação e demissão de profissionais, inclusive preenchendo informações na 
+            carteira de trabalho; organiza e arquiva documentos do setor, registra e controla período de férias e 
+            afastamento de funcionários; e auxilia no treinamento e capacitação dos empregados.
+          </b></center>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  
+
 </body>
+
 </html>
