--- a/CARD/index.html
+++ b/CARD/index.html
@@ -86,6 +86,33 @@
                 </div>
             </div>
         </div>
+        <div class="cartao cartao6">
+            <div class="cartao-container">
+                <div class="cartao-front"></div>
+                <div class="cartao-back">
+                    <center><b>
+            Auxilia o advogado e oferece apoio técnico e administrativo a empresas. Presta atendimento ao público; verifica
+            os prazos de cada etapa de um processo judicial; calcula valores dos honorários dos advogados e dos custos deum processo; recebe e envia 
+            documentos, registrando a movimentação em sistemas ou livros de protocolo;redige contratos, ofícios, processos e cartas comerciais e arquiva
+            processos, entre outras atividades.
+          </b></center>
+                </div>
+            </div>
+        </div>
+        <div class="cartao cartao7">
+            <div class="cartao-container">
+                <div class="cartao-front"></div>
+                <div class="cartao-back">
+                    <center><b>
+                        É o curso que forma o profissional que atua no projeto, na execução, na instalação e na 
+                        manutenção de máquinas e equipamentos automatizados e sistemas robotizados. Ele também 
+                        opera equipamentos, utiliza softwares específicos e linguagens de programação adequadas; 
+                        coordena equipes e oferece treinamento operacional; programa e opera máquinas; realiza manutenções 
+                        preditiva, preventiva e corretiva, em conformidade com as normas técnicas.
+          </b></center>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
