--- a/CARD/index.html
+++ b/CARD/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <center>
 
     <h1> Cursos presentes no Vestibulinho da Etec de Lins </h1>
 
@@ -114,6 +115,7 @@
             </div>
         </div>
     </div>
+    </center>
 
 </body>
 
