--- a/TRABALHO/homepage.html
+++ b/TRABALHO/homepage.html
@@ -8,11 +8,23 @@
     <title>HomePage</title>
 </head>
 <body>
-    <ul>
-        <li><a href="default.asp">Home</a></li>
-        <li><a href="news.asp">News</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
-      </ul>
+
+    <header>
+        <div class="container">
+
+            
+            <nav>
+                <ul>
+                    <li><a href=#>Home</a></li>
+                    <li><a href=#>Serviços</a></li>
+                    <li><a href=#>Nosso trabalho</a></li>
+                    <li><a href=#>Sobre</a></li>
+                    <li><a href=#>Sociais</a></li>
+                </ul>
+            </nav>
+
+
+        </div>
+    </header>
 </body>
 </html>
