--- a/TRABALHO/homepage.html
+++ b/TRABALHO/homepage.html
@@ -26,5 +26,40 @@
 
         </div>
     </header>
+
+    <div class="slider">
+        
+        <div class="slides">
+
+            <input type="radio" name="radio-btn" id="radio1">
+            <input type="radio" name="radio-btn" id="radio2">
+            <input type="radio" name="radio-btn" id="radio3">
+            <input type="radio" name="radio-btn" id="radio4">
+
+            <div class="slide first">
+                <img src="imagens/foto1.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="imagens/foto2.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="imagens/foto3.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="imagens/foto4.jpg" alt="">
+            </div>
+            
+        </div>
+
+        <div class="dot-navbar">
+            <label class="manual-btn" for="radio1"></label>
+            <label class="manual-btn" for="radio2"></label>
+            <label class="manual-btn" for="radio3"></label>
+            <label class="manual-btn" for="radio4"></label>
+        </div>
+    </div>
 </body>
 </html>
