--- a/TRABALHO/homepage.html
+++ b/TRABALHO/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="home.css">
     <title>HomePage</title>
 </head>
 <body>
@@ -15,9 +15,9 @@
             
             <nav>
                 <ul>
-                    <li><a href=#>Home</a></li>
+                    <li><a href="homepage.html">Home</a></li>
                     <li><a href=#>Serviços</a></li>
-                    <li><a href=#>Nosso trabalho</a></li>
+                    <li><a href="trabai.html">Nosso trabalho</a></li>
                     <li><a href=#>Sobre</a></li>
                     <li><a href=#>Sociais</a></li>
                 </ul>
