--- a/TRABALHO/homepage.html
+++ b/TRABALHO/homepage.html
@@ -12,6 +12,7 @@
     <header>
         <div class="container">
 
+            <img src="imagens/logowhitecomp.png" class="logo">
             
             <nav>
                 <ul>
