--- a/TRABALHO/trabai.html
+++ b/TRABALHO/trabai.html
@@ -12,6 +12,7 @@
     <header>
         <div class="container">
 
+            <img scr="imagens/logowhite.png" class="logo">
             
             <nav>
                 <ul>
