--- a/TRABALHO/trabai.html
+++ b/TRABALHO/trabai.html
@@ -12,14 +12,14 @@
     <header>
         <div class="container">
 
-            <img scr="imagens/logowhite.png" class="logo">
+            <img src="imagens/logowhitecomp.png" class="logo">
             
             <nav>
                 <ul>
                     <li><a href="homepage.html">Home</a></li>
-                    <li><a href=#>Serviços</a></li>
+                    <li><a href="serv.html">Serviços</a></li>
                     <li><a href="trabai.html">Nosso trabalho</a></li>
-                    <li><a href=#>Sobre</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
                     <li><a href=#>Sociais</a></li>
                 </ul>
             </nav>
