--- a/TRABALHO/homepage.html
+++ b/TRABALHO/homepage.html
@@ -17,9 +17,9 @@
             <nav>
                 <ul>
                     <li><a href="homepage.html">Home</a></li>
-                    <li><a href=#>Serviços</a></li>
+                    <li><a href="serv.html">Serviços</a></li>
                     <li><a href="trabai.html">Nosso trabalho</a></li>
-                    <li><a href=#>Sobre</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
                     <li><a href=#>Sociais</a></li>
                 </ul>
             </nav>
@@ -50,7 +50,7 @@
             </div>
 
             <div class="slide">
-                <img src="imagens/foto4.jpg" alt="">
+                <img src="imagens/foto4.jpeg" alt="">
             </div>
             
         </div>
