--- a/TRABALHO/serv.html
+++ b/TRABALHO/serv.html
@@ -18,7 +18,7 @@
                   <li><a href="homepage.html">Home</a></li>
                   <li><a href="serv.html">Serviços</a></li>
                   <li><a href="sobre.html">Sobre</a></li>
-                  <li><a href=#>Sociais</a></li>
+                  <li><a href="siga.html">Sociais</a></li>
               </ul>
           </nav>
 
