--- a/REVISÃO 1AGO/index.html
+++ b/REVISÃO 1AGO/index.html
@@ -26,7 +26,8 @@
     </div>
 
     <div class="dinamica">
-        <p id="clicou" onclick="clicar()"> CLIQUE AQUI PARA RECEBER UM ELOGIO </p>
+        <button type="button" onclick="clicar()"> <b>CLIQUE AQUI PARA RECEBER UM ELOGIO</b> </button>
+        <p id="clicou" class="clicou" onmouseover="passar()"></p>
     </div>
 
 
