--- a/REVISÃO 1AGO/index.html
+++ b/REVISÃO 1AGO/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="dinamica">
-        <button type="button" onclick="clicar()"> <b>CLIQUE AQUI PARA RECEBER UM ELOGIO</b> </button>
-        <p id="clicou" class="clicou" onmouseover="passar()"></p>
+        <button type="button" onclick="clicar(this)"> <b>CLIQUE AQUI PARA RECEBER UM ELOGIO</b> </button>
+        <p id="clicou" class="clicou" onmouseover="passar(this)"></p>
     </div>
 
 
