--- a/PASTA DE ALHO/homepage.html
+++ b/PASTA DE ALHO/homepage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="homepage.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/8184/8184250.png">
     <title>Allium</title>
 </head>
 <body>
@@ -12,20 +13,20 @@
     <header>
         <div class="container">
 
-            <img src="imagens/logowhitecomp.png" class="logo">
-            
             <nav>
                 <ul>
                     <li><a href="homepage.html">Home</a></li>
-                    <li><a href="serv.html">Serviços</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="siga.html">Sociais</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Sociais</a></li>
                 </ul>
             </nav>
 
-
         </div>
     </header>
+
+    <h1 class="titulo"> Allium </h1>
+
+    <p class="texto"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum </p>
 
 </body>
 </html>
