--- a/PASTA DE ALHO/homepage.html
+++ b/PASTA DE ALHO/homepage.html
@@ -13,6 +13,8 @@
     <header>
         <div class="container">
 
+            <img src="./img/allium-removebg-preview.png" alt="iyg" height=200px weight=200px class=logo>
+
             <nav>
                 <ul>
                     <li><a href="homepage.html">Home</a></li>
