--- a/PASTA DE ALHO/homepage.html
+++ b/PASTA DE ALHO/homepage.html
@@ -13,14 +13,16 @@
     <header>
         <div class="container">
 
-            <img src="./img/allium-removebg-preview.png" alt="iyg" height=200px weight=200px class=logo>
+            <a href="#"><img src="./img/allium-removebg-preview.png" alt="iyg" height=150px weight=150px class=logo> </a>
 
             <nav>
-                <ul>
-                    <li><a href="homepage.html">Home</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Sociais</a></li>
-                </ul>
+                <div class="ul-container">
+                    <ul>
+                        <li><a href="homepage.html">Home</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Sociais</a></li>
+                    </ul>
+                </div>
             </nav>
 
         </div>
