--- a/PASTA DE ALHO/homepage.html
+++ b/PASTA DE ALHO/homepage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="homepage.css">
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/8184/8184250.png">
+    <link rel="icon" href="./img/allium-preto.png">
     <title>Allium</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
 
-            <a href="#"> <img src="./img/allium-preto.png" alt="Logo Allium" height=150px weight=150px class=logo> </a>
+            <a href="#"> <img src="./img/allium-preto.png" alt="Logo Allium" height=150px widt=150px class=logo> </a>
 
             <nav>
                 <div class="ul-container">
@@ -40,9 +40,9 @@
     </div>
 
     <div class="caixatexto">
-
+        <a href="#"> <img src="./img/allium-preto.png" alt="Logo Allium" height=500px width=500px> </a>
         <div class="texto">
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum </p>
+            <h1 class="paragrafo"> Com uma nova fórmula, e uma nova experiência. Uma nova invenção, da <a href="#">Allium</a> com a <a href="#">Colgate</a> para você ter um hálito de arrepiar!</h1>
         </div>
         
     </div>
