--- a/REPLICA/inedx.html
+++ b/REPLICA/inedx.html
@@ -21,9 +21,20 @@
                 </ul>
             </nav>
 
-
         </div>
     </header>
     
+    <a aria-label="DELTARUNE status update" href="#" class="anuncio">
+        <h2>
+            <small class="red"> NEW! </small>
+            <br>
+            <span class="yellow">DELTARUNE</span>
+            <br>
+            <div class="status">Statuts Update</div>
+            <small>Sept 2022</small>
+        </h2>
+    </a>
+
+
 </body>
 </html>
