--- a/REPLICA/inedx.html
+++ b/REPLICA/inedx.html
@@ -35,5 +35,9 @@
         </h2>
     </a>
 
+    <div class="castle">
+        <img src="assets/images/bg.gif" alt="castle">
+    </div>
+
 </body>
 </html>
