--- a/REPLICA/inedx.html
+++ b/REPLICA/inedx.html
@@ -39,5 +39,9 @@
         <img src="assets/images/bg.gif" alt="castle">
     </div>
 
+    <div class="logo">
+        <img src="assets/images/logo.png" alt="logo">
+    </div>
+
 </body>
 </html>
