--- a/REPLICA/inedx.html
+++ b/REPLICA/inedx.html
@@ -25,22 +25,42 @@
     </header>
     
     <a aria-label="DELTARUNE status update" href="#" class="anuncio">
-        <h2>
+        <h2><center>
             <small class="red"> NEW! </small>
             <br>
             <span class="yellow">DELTARUNE</span>
             <br>
             <div class="status">Statuts Update</div>
             <small>Sept 2022</small>
-        </h2>
+        </h2></center>
     </a>
 
-    <div class="castle">
-        <img src="assets/images/bg.gif" alt="castle">
+
+    <div class="castelo-acessorios">
+        <div class="castle">
+            <img src="assets/images/bg.gif" alt="castle" height="600px">
+        </div>
+
+        <div class="deltarune">
+            <a href="#">
+                <img src="assets/images/logo.png" alt="logo" height="90px">
+            </a>
+        </div>
+
+        <div class="capitulos">
+            <center>
+            CHAPTER 1&2 AVAILABLE FOR FREE
+            </center>
+        </div>
+
+        <div class="fita">
+            <img src="assets/images/ribbon.png" alt="ribbon">
+        </div>
     </div>
 
-    <div class="logo">
-        <img src="assets/images/logo.png" alt="logo">
+    <div class="trailer">
+             <iframe allowfullscreen="true" class="embed-responsive-item" src="//www.youtube.com/embed/AdY8c0XQCcM" title="DELTARUNE Chapter 2 Trailer">
+            </iframe>
     </div>
 
 </body>
