--- a/pizzaria/index.html
+++ b/pizzaria/index.html
@@ -136,7 +136,7 @@
 <br>
 <br>
   
-<form>
+<form class="cartao">
 
     <font face="Ink Free" color="white" size="6"><b> 
         FORMAS DE PAGAMENTO
@@ -155,7 +155,7 @@
 <br>
 <br>
 
-<form>
+<form class="adicionais">
 
     ADICIONAIS
     <br>
@@ -170,7 +170,7 @@
     <input type="checkbox" name="Barbecue"> Barbecue
 </b></font>
 </form>
-
+<br>
 <center>
     <font face="Ink Free" size="7" color="white"><b>
         BON APPETIT!
