--- a/REPLICA/inedx.html
+++ b/REPLICA/inedx.html
@@ -65,5 +65,23 @@
             </iframe>
     </div>
 
+    <h1 class="news"> News and Updates </h1>
+    <hr>
+<br>
+    <div class="novidades">
+
+        <a aria-label="DELTARUNE status update" href="#" class="anuncionovidade">
+            <h2>
+                <small class="red"> NEW! </small>
+                <br>
+                <span class="yellow">DELTARUNE</span>
+                <br>
+                <div class="status">Statuts Update</div>
+                <small class="gray">Sept 2022</small>
+            </h2>
+        </a>
+
+
+    </div>
 </body>
 </html>
